--- a/index.html
+++ b/index.html
@@ -156,6 +156,40 @@
         </form>
       </section>
     </main>
-    <footer></footer>
+
+    <!-- Подвал сайта -->
+    <footer class="page-footer">
+      <section class="footer-social">
+        <h2 class="visually-hidden">Ссылки на социальные сети</h2>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+      </section>
+      <section class="footer-contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+          <a class="contackts-phone" href="tel:78128121212">+7 (812) 812-12-12</a>
+      </section>
+      <section class="footer-social">
+        <h2 class="visually-hidden">Копирайт</h2>
+          <a class="copyright-link" href="https://htmlacademy.ru/">
+            <img class="copyright" src="#" alt="Копирайт htmlacademy">
+          </a>
+      </section>
+
+    </footer>
   </body>
 </html>
