--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-link" href="index.html">
-          <img class="logo" src="#" alt="Логотип города Седона" />
+          <img
+            class="logo"
+            src="images/logo.svg"
+            width="139"
+            height="70"
+            alt="Логотип города Седона"
+          />
         </a>
         <ul class="navigtion-list">
           <li class="navigation-item">
@@ -149,9 +155,15 @@
       <!-- Форма подписки -->
       <section class="subscription">
         <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" name="Ваш E-mail">
+        <p>
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+        <form
+          class="subscription-form"
+          action="https://echo.htmlacademy.ru/"
+          method="post"
+        >
+          <input type="email" name="Ваш E-mail" />
           <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
@@ -161,35 +173,34 @@
     <footer class="page-footer">
       <section class="footer-social">
         <h2 class="visually-hidden">Ссылки на социальные сети</h2>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a class="button" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Телеграм</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Ютуб</span>
-              </a>
-            </li>
-          </ul>
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+        </ul>
       </section>
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
-          <a class="contackts-phone" href="tel:78128121212">+7 (812) 812-12-12</a>
+        <a class="contackts-phone" href="tel:78128121212">+7 (812) 812-12-12</a>
       </section>
       <section class="footer-social">
         <h2 class="visually-hidden">Копирайт</h2>
-          <a class="copyright-link" href="https://htmlacademy.ru/">
-            <img class="copyright" src="#" alt="Копирайт htmlacademy">
-          </a>
+        <a class="copyright-link" href="https://htmlacademy.ru/">
+          <img class="copyright" src="#" alt="Копирайт htmlacademy" />
+        </a>
       </section>
-
     </footer>
   </body>
 </html>
