Добавляет изображения в шапку, баннер

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             src="images/logo.svg"
             width="139"
             height="70"
-            alt="Логотип города Седона"
+            alt="Логотип города Седона."
           />
         </a>
         <ul class="navigtion-list">
@@ -30,11 +30,13 @@
         <ul class="navigation-item navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+              <img src="images/search.svg" width="18" height="18" alt="Ссылка для поиска.">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+              <img src="images/favorite.svg" width="18" height="17" alt="Ссылка для поиска."
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -50,15 +52,9 @@
       <!--Главный баннер-->
       <section class="main-banner">
         <h1 class="visually-hidden">Каньон Седона</h1>
-        <img
-          class="main-banner-background"
-          src="#"
-          alt="Изображение каньона
-        Седона"
-        />
-        <img class="main-welcome" src="#" alt="Добро пожаловать" />
-        <img class="main-welcome-great" src="#" alt="в великолепный" />
-        <img class="main-city-name" src="#" alt="Каньон Седона" />
+        <img class="main-banner-background" src="images/main_banner.jpg" width="1200" height="485"
+          alt="Изображение каньона Седона">
+        <img class="main-banner-welcome" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в великолепный Каньон Седона"
         <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
