--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SEDONA</title>
   </head>
   <body>
@@ -14,7 +15,7 @@
             width="139"
             height="70"
             alt="Логотип города Седона."
-          />
+          >
         </a>
         <ul class="navigtion-list">
           <li class="navigation-item">
@@ -52,7 +53,7 @@
       <!--Главный баннер-->
       <section class="main-banner">
         <h1 class="visually-hidden">Каньон Седона</h1>
-        <img class="main-banner-background" src="images/main_banner.jpg" width="1200" height="485"
+        <img class="main-banner-background" src="#" width="1200" height="485"
           alt="Изображение каньона Седона">
         <img class="main-banner-welcome" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в великолепный Каньон Седона"
         <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
@@ -71,8 +72,10 @@
             </p>
             <img
               class="advantages-first-image"
-              src="#"
+              src="images/photo-1.jpg"
               alt="Изображение города Седона"
+              width="800"
+              height="384"
             />
             <ul>
               <li class="services-item background-services">
@@ -102,8 +105,10 @@
           <li class="advantages-item">
             <img
               class="advantages-image-second"
-              src="#"
+              src="images/photo-2.jpg"
               alt="Изображение моста дьявола"
+              width="800"
+              height="384"
             />
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description-number">— №2 —</p>
@@ -159,7 +164,7 @@
           action="https://echo.htmlacademy.ru/"
           method="post"
         >
-          <input type="email" name="Ваш E-mail" />
+          <input type="email" name="Ваш E-mail" required>
           <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
@@ -193,8 +198,8 @@
       </section>
       <section class="footer-social">
         <h2 class="visually-hidden">Копирайт</h2>
-        <a class="copyright-link" href="https://htmlacademy.ru/">
-          <img class="copyright" src="#" alt="Копирайт htmlacademy" />
+        <a class="copyright-link" href="https://up.htmlacademy.ru/htmlcss/34/module/3/item/13" target="_blank">
+          <img class="copyright" src="images/copyright.svg" width="115" height="33" alt="Копирайт htmlacademy" />
         </a>
       </section>
     </footer>
