--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link rel="stylesheet" href="styles/styles.css" /> -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SEDONA</title>
   </head>
   <body>
@@ -15,7 +16,7 @@
             width="139"
             height="70"
             alt="Логотип города Седона."
-          >
+          />
         </a>
         <ul class="navigtion-list">
           <li class="navigation-item">
@@ -31,13 +32,23 @@
         <ul class="navigation-item navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img src="images/search.svg" width="18" height="18" alt="Ссылка для поиска.">
+              <img
+                src="images/search.svg"
+                width="18"
+                height="18"
+                alt="Ссылка для поиска."
+              />
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img src="images/favorite.svg" width="18" height="17" alt="Ссылка для поиска."
+              <img
+                src="images/favorite.svg"
+                width="18"
+                height="17"
+                alt="Ссылка для поиска."
+              />
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
@@ -53,20 +64,27 @@
       <!--Главный баннер-->
       <section class="main-banner">
         <h1 class="visually-hidden">Каньон Седона</h1>
-        <img class="main-banner-background" src="#" width="1200" height="485"
-          alt="Изображение каньона Седона">
-        <img class="main-banner-welcome" src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в великолепный Каньон Седона"
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        <img
+          class="main-banner-welcome"
+          src="images/welcome.svg"
+          width="458"
+          height="352"
+          alt="Добро пожаловать в великолепный Каньон Седона"
+        />
       </section>
-
+      <div class="welcome">
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="five_advantages">
+          Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
+        </p>
+      </div>
       <!--Блок с преимуществами-->
       <section class="advantages">
         <h2 class="visually-hidden">Основные преимущества</h2>
         <ol class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description-number">— №1 —</p>
+            <p class="advantages-description">— №1 —</p>
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
@@ -79,24 +97,21 @@
             />
             <ul>
               <li class="services-item background-services">
-                <img class="services-image" src="#" alt="Иконка дома" />
-                <h3 class="services-title">Жильё</h3>
-                <p class="services-description">
+                <h3 class="advantages-title">Жильё</h3>
+                <p class="advantages-description">
                   Рекомендуем пожить в настоящем мотеле, всё как в кино!
                 </p>
               </li>
               <li class="services-item">
-                <img class="services-image" src="#" alt="Изображение еды" />
-                <h3 class="services-title">Еда</h3>
-                <p class="services-description">
+                <h3 class="advantages-title">Еда</h3>
+                <p class="advantages-description">
                   Всегда заказывайте топовый фирменный бургер, вы не
                   разочаруетесь!
                 </p>
               </li>
               <li class="services-item background-services">
-                <img class="services-image" src="#" alt="Изображение подарка" />
-                <h3 class="services-title">Сувениры</h3>
-                <p class="services-description">
+                <h3 class="advantages-title">Сувениры</h3>
+                <p class="advantages-description">
                   Не только китайского, но и настоящего местного производства!
                 </p>
               </li>
@@ -111,28 +126,28 @@
               height="384"
             />
             <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description-number">— №2 —</p>
+            <p class="advantages-description">— №2 —</p>
             <p class="advantages-description">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description-number">— №3 —</p>
+            <p class="advantages-description">— №3 —</p>
             <p class="advantages-description">
               Все достопримечательности находятся очень близко
             </p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description-number">— №4 —</p>
+            <p class="advantages-description">— №4 —</p>
             <p class="advantages-description">
               Ехать в Седону из Лас-Вегаса совсем не скучно!
             </p>
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description-number">— №5 —</p>
+            <p class="advantages-description">— №5 —</p>
             <p class="advantages-description">
               Большинство едет в Гранд Каньон и толпится там
             </p>
@@ -164,7 +179,7 @@
           action="https://echo.htmlacademy.ru/"
           method="post"
         >
-          <input type="email" name="Ваш E-mail" required>
+          <input type="email" name="Ваш E-mail" required />
           <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
@@ -198,8 +213,18 @@
       </section>
       <section class="footer-social">
         <h2 class="visually-hidden">Копирайт</h2>
-        <a class="copyright-link" href="https://up.htmlacademy.ru/htmlcss/34/module/3/item/13" target="_blank">
-          <img class="copyright" src="images/copyright.svg" width="115" height="33" alt="Копирайт htmlacademy" />
+        <a
+          class="copyright-link"
+          href="https://up.htmlacademy.ru/htmlcss/34/module/3/item/13"
+          target="_blank"
+        >
+          <img
+            class="copyright"
+            src="images/copyright.svg"
+            width="115"
+            height="33"
+            alt="Копирайт htmlacademy"
+          />
         </a>
       </section>
     </footer>
