создает базовые стили

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <!-- <link rel="stylesheet" href="styles/styles.css" /> -->
+    <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SEDONA</title>
@@ -159,7 +159,7 @@
       <section id="question" class="question-block">
         <h2 class="visually-hidden">Бронирование гостинницы</h2>
         <p>Заинтересовались?</p>
-        <p>
+        <p class="advantages-description">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
@@ -170,8 +170,8 @@
 
       <!-- Форма подписки -->
       <section class="subscription">
-        <h2 class="subscription-title">Подпишитесь на рассылку</h2>
-        <p>
+        <p>Подпишитесь на рассылку</p>
+        <p class="advantages-description">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form
