--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             src="images/logo.svg"
             width="139"
             height="70"
-            alt="Логотип города Седона."
+            alt="Логотип города Седона"
           />
         </a>
         <ul class="navigtion-list">
