--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
           alt="Добро пожаловать в великолепный Каньон Седона"
         />
       </section>
-      <div class="welcome">
-        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+      <div class="body welcome">
+        <p>
+          Седона — небольшой городок в Аризоне,<br />
+          заслуживающий большего!
+        </p>
         <p class="five_advantages">
           Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
         </p>
@@ -83,10 +86,12 @@
         <h2 class="visually-hidden">Основные преимущества</h2>
         <ol class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
+            <h3 class="advantages advantages-title">Настоящий городок</h3>
             <p class="advantages-description">— №1 —</p>
             <p class="advantages-description">
-              Седона — не аттракцион для туристов, там течёт своя жизнь
+              Седона — не аттракцион для<br />
+              туристов, там течёт своя<br />
+              жизнь
             </p>
             <img
               class="advantages-first-image"
