--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
         />
       </section>
       <div class="body welcome">
-        <p>
-          Седона — небольшой городок в Аризоне,<br />
-          заслуживающий большего!
-        </p>
+        <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="five_advantages">
           Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
         </p>
@@ -89,9 +86,7 @@
             <h3 class="advantages advantages-title">Настоящий городок</h3>
             <p class="advantages-description">— №1 —</p>
             <p class="advantages-description">
-              Седона — не аттракцион для<br />
-              туристов, там течёт своя<br />
-              жизнь
+              Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
             <img
               class="advantages-first-image"
@@ -104,7 +99,7 @@
               <li class="services-item background-services">
                 <h3 class="advantages-title">Жильё</h3>
                 <p class="advantages-description">
-                  Рекомендуем пожить в настоящем мотеле, всё как в кино!
+                  Рекомендуем пожить в настоящем мотеле всё как в кино!
                 </p>
               </li>
               <li class="services-item">
