--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
               width="800"
               height="384"
             />
-            <ul>
-              <li class="services-item background-services">
+            <ul class="services">
+              <li class="services-item">
                 <h3 class="advantages-title">Жильё</h3>
                 <p class="advantages-description">
                   Рекомендуем пожить в настоящем мотеле всё как в кино!
