--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       <section class="advantages">
         <h2 class="visually-hidden">Основные преимущества</h2>
         <ol class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages advantages-title">Настоящий городок</h3>
+          <li class="advantages-item-image">
+            <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">— №1 —</p>
             <p class="advantages-description">
               Седона — не аттракцион для туристов, там течёт своя жизнь
@@ -95,7 +95,7 @@
               width="800"
               height="384"
             />
-            <ul class="services">
+            <ul class="advantages services">
               <li class="services-item">
                 <h3 class="advantages-title">Жильё</h3>
                 <p class="advantages-description">
@@ -109,7 +109,7 @@
                   разочаруетесь!
                 </p>
               </li>
-              <li class="services-item background-services">
+              <li class="services-item">
                 <h3 class="advantages-title">Сувениры</h3>
                 <p class="advantages-description">
                   Не только китайского, но и настоящего местного производства!
@@ -117,7 +117,7 @@
               </li>
             </ul>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item-image">
             <img
               class="advantages-image-second"
               src="images/photo-2.jpg"
