--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
       <section id="question" class="question-block">
         <h2 class="visually-hidden">Бронирование гостинницы</h2>
         <p>Заинтересовались?</p>
-        <p class="advantages-description">
+        <p class="question-date">
           Укажите предполагаемые даты поездки, и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
-        <button class="question-button" type="submit">
+        <button class="question question-button" type="submit">
           поиск гостинницы в седоне
         </button>
       </section>
@@ -171,7 +171,7 @@
       <!-- Форма подписки -->
       <section class="subscription">
         <p>Подпишитесь на рассылку</p>
-        <p class="advantages-description">
+        <p class="subscription-text">
           Только полезная информация и никакого спама, честное бойскаутское!
         </p>
         <form
