--- a/index.html
+++ b/index.html
@@ -179,7 +179,12 @@
           action="https://echo.htmlacademy.ru/"
           method="post"
         >
-          <input type="email" name="Ваш E-mail" required />
+          <input
+            type="email"
+            name="Ваш E-mail"
+            required
+            placeholder="Ваш e-mail"
+          />
           <button class="subscribe-button" type="submit">Подписаться</button>
         </form>
       </section>
