--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 
       <!-- Форма подписки -->
       <section class="subscription">
+        <h2 class="visually-hidden">Подписаться на рассылку</h2>
         <p>Подпишитесь на рассылку</p>
         <p class="subscription-text">
           Только полезная информация и никакого спама, честное бойскаутское!
