--- a/index.html
+++ b/index.html
@@ -102,34 +102,34 @@
                 />
               </div>
             </li>
-            <!-- <div class="services"> -->
-            <li class="advantages-services">
-              <div class="services-item">
-                <h3 class="advantages-title">Жильё</h3>
-                <p class="advantages-description">
-                  Рекомендуем пожить в настоящем мотеле всё как в кино!
-                </p>
-              </div>
-            </li>
+            <div class="services">
+              <li class="advantages-services">
+                <div class="services-item">
+                  <h3 class="advantages-title">Жильё</h3>
+                  <p class="advantages-description">
+                    Рекомендуем пожить в настоящем мотеле всё как в кино!
+                  </p>
+                </div>
+              </li>
 
-            <li class="advantages-services">
-              <div class="services-item">
-                <h3 class="advantages-title">Еда</h3>
-                <p class="advantages-description">
-                  Всегда заказывайте топовый фирменный бургер, вы не
-                  разочаруетесь!
-                </p>
-              </div>
-            </li>
-            <li class="advantages-services">
-              <div class="services-item">
-                <h3 class="advantages-title">Сувениры</h3>
-                <p class="advantages-description">
-                  Не только китайского, но и настоящего местного производства!
-                </p>
-              </div>
-            </li>
-            <!-- </div> -->
+              <li class="advantages-services">
+                <div class="services-item">
+                  <h3 class="advantages-title">Еда</h3>
+                  <p class="advantages-description">
+                    Всегда заказывайте топовый фирменный бургер, вы не
+                    разочаруетесь!
+                  </p>
+                </div>
+              </li>
+              <li class="advantages-services">
+                <div class="services-item">
+                  <h3 class="advantages-title">Сувениры</h3>
+                  <p class="advantages-description">
+                    Не только китайского, но и настоящего местного производства!
+                  </p>
+                </div>
+              </li>
+            </div>
             <li class="advantages-item">
               <div class="advantages-second-image">
                 <img
