--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <!--Блок с преимуществами-->
         <section class="advantages">
           <h2 class="visually-hidden">Основные преимущества</h2>
-          <ol class="advantages-list">
+          <ul class="advantages-list">
             <li class="advantages-item">
               <div class="advantages-item-city">
                 <h3 class="advantages-title">Настоящий городок</h3>
@@ -93,52 +93,47 @@
                   Седона — не аттракцион для туристов, там течёт своя жизнь
                 </p>
               </div>
-              <div class="advantages-first-image">
-                <img
-                  src="images/photo-1.jpg"
-                  alt="Изображение города Седона"
-                  width="800"
-                  height="384"
-                />
-              </div>
+              <img
+                class="advantages-image"
+                src="images/photo-1.jpg"
+                alt="Изображение города Седона"
+                width="800"
+                height="384"
+              />
             </li>
-            <div class="services">
-              <li class="advantages-services">
-                <div class="services-item">
-                  <h3 class="advantages-title">Жильё</h3>
-                  <p class="advantages-description">
-                    Рекомендуем пожить в настоящем мотеле всё как в кино!
-                  </p>
-                </div>
-              </li>
+          </ul>
+          <ul class="advantages-services">
+            <li class="services-item">
+              <h3 class="advantages-title">Жильё</h3>
+              <p class="advantages-description">
+                Рекомендуем пожить в настоящем мотеле всё как в кино!
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="advantages-title">Еда</h3>
+              <p class="advantages-description">
+                Всегда заказывайте топовый фирменный бургер, вы не
+                разочаруетесь!
+              </p>
+            </li>
 
-              <li class="advantages-services">
-                <div class="services-item">
-                  <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-description">
-                    Всегда заказывайте топовый фирменный бургер, вы не
-                    разочаруетесь!
-                  </p>
-                </div>
-              </li>
-              <li class="advantages-services">
-                <div class="services-item">
-                  <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-description">
-                    Не только китайского, но и настоящего местного производства!
-                  </p>
-                </div>
-              </li>
-            </div>
+            <li class="services-item">
+              <h3 class="advantages-title">Сувениры</h3>
+              <p class="advantages-description">
+                Не только китайского, но и настоящего местного производства!
+              </p>
+            </li>
+          </ul>
+          <ul class="advantages-list">
             <li class="advantages-item">
-              <div class="advantages-second-image">
-                <img
-                  src="images/photo-2.jpg"
-                  alt="Изображение моста дьявола"
-                  width="800"
-                  height="384"
-                />
-              </div>
+              <img
+                class="advantages-image"
+                src="images/photo-2.jpg"
+                alt="Изображение моста дьявола"
+                width="800"
+                height="384"
+              />
+
               <div class="advantages-item-bridge">
                 <h3 class="advantages-title">Там есть мост дьявола</h3>
                 <p class="advantages-description">— №2 —</p>
@@ -147,36 +142,30 @@
                 </p>
               </div>
             </li>
-            <section class="advantages-services last">
-              <li class="advantages-services">
-                <div class="advantages-item-last">
-                  <h3 class="advantages-title">Небольшая площадь</h3>
-                  <p class="advantages-description">— №3 —</p>
-                  <p class="advantages-description">
-                    Все достопримечательности находятся очень близко
-                  </p>
-                </div>
-              </li>
-              <li class="advantages-services">
-                <div class="advantages-item-last">
-                  <h3 class="advantages-title">Красивая дорога</h3>
-                  <p class="advantages-description">— №4 —</p>
-                  <p class="advantages-description">
-                    Ехать в Седону из Лас-Вегаса совсем не скучно!
-                  </p>
-                </div>
-              </li>
-              <li class="advantages-services">
-                <div class="advantages-item-last">
-                  <h3 class="advantages-title">Мало туристов</h3>
-                  <p class="advantages-description">— №5 —</p>
-                  <p class="advantages-description">
-                    Большинство едет в Гранд Каньон и толпится там
-                  </p>
-                </div>
-              </li>
-            </section>
-          </ol>
+          </ul>
+          <ul class="advantages-services">
+            <li class="services-item">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">— №3 —</p>
+              <p class="advantages-description">
+                Все достопримечательности находятся очень близко
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">— №4 —</p>
+              <p class="advantages-description">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="services-item">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">— №5 —</p>
+              <p class="advantages-description">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+          </ul>
         </section>
 
         <!-- Блок с вопросом -->
