правит написание стилей

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </section>
         <div class="body welcome">
           <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p class="five_advantages">
+          <p class="five-advantages">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
         </div>
