--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
           />
         </section>
         <div class="body welcome">
-          <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p class="five-advantages">
+          <p class="name-block">
+            Седона — небольшой городок в Аризоне, заслуживающий большего!
+          </p>
+          <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
           </p>
         </div>
@@ -172,8 +174,8 @@
         <div class="question">
           <section id="question" class="question-block">
             <h2 class="visually-hidden">Бронирование гостинницы</h2>
-            <p>Заинтересовались?</p>
-            <p class="question-date">
+            <p class="name-block">Заинтересовались?</p>
+            <p class="description-text">
               Укажите предполагаемые даты поездки, и мы покажем вам лучшие
               предложения гостиниц в Седоне
             </p>
@@ -185,8 +187,8 @@
         <!-- Форма подписки -->
         <section class="subscription">
           <h2 class="visually-hidden">Подписаться на рассылку</h2>
-          <p>Подпишитесь на рассылку</p>
-          <p class="subscription-text">
+          <p class="name-block">Подпишитесь на рассылку</p>
+          <p class="description-text">
             Только полезная информация и никакого спама, честное бойскаутское!
           </p>
           <form
