--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="navigation-logo">
-        <a href="index.html">
+      <!--  <div class="navigation-logo">
+
+      </div> -->
+
+      <nav class="navigation">
+        <a class="logo" href="index.html">
           <img
             src="images/logo.svg"
             width="139"
@@ -17,8 +21,6 @@
             alt="Логотип города Седона"
           />
         </a>
-      </div>
-      <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -30,10 +32,10 @@
             <a class="navigation-link" href="#">Гостинницы</a>
           </li>
         </ul>
-        <ul class="navigation-item navigation-user">
+        <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img
+              <img class="search"
                 src="images/search.svg"
                 width="18"
                 height="18"
@@ -44,7 +46,7 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <img
+              <img class="favorite"
                 src="images/favorite.svg"
                 width="18"
                 height="17"
@@ -53,11 +55,10 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="#question">
-              <span class="visually-hidden">ХОЧУ СЮДА</span>
+
+            <button class="want-button" type="submit">Хочу сюда</button>
             </a>
-          </li>
+
         </ul>
       </nav>
     </header>
