правит горизонтальный скрол

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </section>
         <div class="body-welcome">
           <p class="name-block">
-            Седона — небольшой городок в Аризоне,<br />заслуживающий большего!
+            Седона — небольшой городок в Аризоне,<br>заслуживающий большего!
           </p>
           <p class="description-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
